manifests/apps/zot/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zot-ingress
  namespace: zot
spec:
  hostnames:
    - zot.acebutt.xyz
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: zot
          port: 5000
          weight: 10
      matches:
        - path:
            type: PathPrefix
            value: /
